[Evo] #3102 - User documentation
 - Fix translation
 - #3103 Update tabs
 - Improve youtube video display

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -152,7 +152,7 @@
             "to": "expire le"
         },
         "help_board":{
-            "title": "Documentation et aides",
+            "title": "Documentations et aides",
             "title_patchs": "Mises à jours",
             "title_helps": "Aides",
             "title_video": "Vidéo",
