[Evo] #3116 - Add classeur comment
 - Create button to save comment
 - Remove comment from update classeur
 - Create endpoint api comments
 - Update classeur and actions Type
 - Improve translations

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -95,7 +95,9 @@
 
             },
             "comments": {
-              "name": "Commentaires du classeur"
+              "name": "Commentaires du classeur",
+              "new": "Nouveau commentaire",
+              "submit": "Ajouter un commentaire"
             },
             "label": {
               "circuits": "Liste des circuits",
