[Evo] #3214 - Helios preview
 - Add css style
 - Add Helios components
 - Refactor Helios endpoint API
 - Refactor Helios class
 - Remove unuse code
 - Add translations

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -10,6 +10,29 @@
         "confirm_deletion_item": "Voulez vous vraiment supprimer cet élément ?",
         "drop_file_here": "Déposer le fichier ici",
         "file_is_required": "Le fichier est requis",
+        "helios": {
+            "voucher": "Bordereau",
+            "budget": "Budget",
+            "signing": "Signature",
+            "no_signing": "Le flux n'est pas encore signé",
+            "attachment_list": "Liste des pièces",
+            "attachment_number": "N°Piece",
+            "creditor": "Créancier Référence bancaire",
+            "expenditure_type": "Nature de la dépense",
+            "imputation": "Imputation",
+            "amount_ht": "Montant HT",
+            "amount_tva": "Montant TVA",
+            "amount_ttc": "Montant TTC",
+            "attachments": "Pièces jointes",
+            "voucher_infos": "Informations du bordereau",
+            "number": "Numéro",
+            "fiscal_year": "Exercice",
+            "type": "Type",
+            "year_to_date": "Cumul annuel",
+            "issue_date": "Date d'émission",
+            "attachments_count": "Nombre de pièces",
+            "amount": "Montant"
+        },
         "button": {
             "delete": "Supprimer",
             "add_user": "Ajouter un utilisateur",
