[Evo] #2890 - Improve classeur list
 - Improve css
 - Update informations classeurs
 - Add classeur pagination for list
 - Add classeur's component status
 - Update endpoint list classeur
 - Improve translation

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -115,7 +115,12 @@
               "finish": "Finalisé",
               "remote": "Retiré",
               "retract": "Retracté"
-
+            },
+            "pagination" : {
+                "previous": "Précédent",
+                "next": "Suivant",
+                "page": "page",
+                "current": "Vous êtes sur la page"
             },
             "comments": {
               "name": "Commentaires du classeur",
@@ -140,6 +145,8 @@
                 "name": "Nom",
                 "current_user": "Nom intervenant",
                 "create_date": "Date de dépôt",
+                "status": "Status",
+                "type": "Type",
                 "limit_date": "Date limite",
                 "actions": "Actions",
                 "select": "Sélection"
