--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -161,7 +161,8 @@
             "view_button": "Voir le document"
         },
         "consult_document": "Voir le document",
-        "search_by_name": "Recherche par nom"
+        "search_by_name": "Recherche par nom",
+        "type_a_name": "Saisir un nom"
     },
     "admin": {
         "title": "Rechercher un {{name}}",
@@ -221,7 +222,15 @@
             "name_plural": "types",
             "complet_name": "type de classeurs",
             "complet_name_plural": "types de classeurs",
-            "help_text_add_type": "Saisir un nom pour ajouter un nouveau type"
+            "help_text_add_type": "Saisir un nom pour ajouter un nouveau type",
+            "title_add_type": "Ajout d'un type",
+            "list_editable_type": "Liste des types modifiable",
+            "list_not_editable_type": "Liste des types non modifiable",
+            "error_save": "Une erreur est survenue à l'enregistrement du type",
+            "error_delete": "Une erreur est survenue à la suppression du type",
+            "error_fetch_list": "Une erreur est survenue à la récupération des types",
+            "success_save": "Le type a été enregistré",
+            "success_delete": "Le type a été supprimé"
         },
         "etape": {
             "name": "étape",
