[Evo] #3324 - Improve graphics edit classeur
 - Improve circuit graphics
 - Improve classeur editions rules
 - Improve download PDF buttons
 - Improve download PDF Visa and Signature
 - Add etapeClasseur date validation
 - Improve translation rule

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -169,7 +169,7 @@
             "no_preview": "Aucune prévisualisation possible",
             "error": {
                 "file_acceptation_rules": "Les fichiers doivent être au bon format et d'une taille maximum de 100 Mo",
-                "file_acceptation_rules_helios": "Le classeur ne doit comporter qu'un seul fichier PES. La taille maximum du fichier est 100 Mo"
+                "file_acceptation_rules_helios": "Le classeur ne doit comporter qu'un seul fichier PES au format xml. La taille maximum du fichier est 100 Mo"
             }
         },
         "user": {
