[Evo] #1639 - Responsive design
 - Add off canvas menu
 - Improve menu footer
 - Improve dashboard component for responsive
 - Improve menu component for responsive
 - Improve classeur component for responsive
 - Improve circuit component for responsive
 - Improve classeur infos component for responsive
 - Improve classeur list component for responsive
 - Improve stats component for responsive
 - Improve documentations component for responsive
 - Update translations
 - Fix tabs for medium display

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -193,7 +193,7 @@
             "title": "Documentations et aides",
             "title_patchs": "Mises à jours",
             "title_helps": "Aides",
-            "title_video": "Vidéo",
+            "title_video": "Vidéos",
             "view_button": "Voir le document"
         },
         "consult_document": "Voir le document",
