[Evo] ref #3277 - improve visibility of classeur status label
- Remove status from ClasseurInfos component 
- Add a label with classeur status
- Code refactoring

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -111,11 +111,11 @@
             },
             "status": {
               "name": "status",
-              "refuse": "Refusé",
+              "refused": "Refusé",
               "pending": "En cours",
-              "finish": "Finalisé",
-              "remote": "Retiré",
-              "retract": "Retracté"
+              "finished": "Finalisé",
+              "withdrawn": "Retiré",
+              "retracted": "Retracté"
             },
             "pagination" : {
                 "previous": "Précédent",
