[Evo] #1586 - Link to Ozwillo account
 - Add Ozwillo link in config
 - Add Ozwillo color in css
 - Update file display
 - Remove firstname and lastname of user edition
 - Update user admin component
 - Update account, AvatarForm, SignatureForm components
 - Update user api endpoint
 - Update Entity form
 - Improve translations

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -173,6 +173,7 @@
             }
         },
         "user": {
+            "title" : "Profil",
             "certificate" : "certificat",
             "certificate_info" : "Information certificat",
             "certificate_validity" : "Votre certificat expire dans {{count}} jour",
@@ -187,7 +188,8 @@
             "transmitter_from": "émis par",
             "validity": "validité",
             "from": "émis le",
-            "to": "expire le"
+            "to": "expire le",
+            "upadate_account": "Modifier mon profil"
         },
         "help_board":{
             "title": "Documentations et aides",
@@ -303,6 +305,7 @@
             "name_plural": "utilisateurs",
             "subtitle_user": "Informations utilisateur",
             "subtitle_signature": "Informations signatures",
+            "subtitle_certificate": "Informations certificats",
             "subtitle_geo": "Informations géographiques",
             "subtitle_application": "Informations applications",
             "subtitle_role": "Rôles de l'utilisateur",
