[Evo] ref #3323 - classeurs preview before signature
- Display cabinet when user click on signing button (for one and several classeurs)
- Create classeurs preview component
- Add empty default value in Button component
- Add edit propertie in OnlyOffice component
- #2712 Integration of onlyoffice in docker compose file 
- Fix route conflict with old classeur controller

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -201,7 +201,13 @@
         "consult_document": "Voir le document",
         "search_by_name": "Recherche par nom",
         "type_a_name": "Saisir un nom",
-        "file_acceptation_rules": "Le fichier doit être au format {{types}} et d'une taille maximum de {{sizeMax}}"
+        "file_acceptation_rules": "Le fichier doit être au format {{types}} et d'une taille maximum de {{sizeMax}}",
+        "sign_classeur": "Signer le classeur",
+        "sign_classeur_plural": "Signer les classeurs",
+        "sign_several_classeurs": "Signer plusieurs classeurs",
+        "list_documents_by_classeur": "Liste des documents par classeur",
+        "browser_not_support_pdf": "Votre navigateur ne supporte pas le format PDF",
+        "download_pdf": "Télécharger le PDF"
     },
     "admin": {
         "title": "Rechercher un {{name}}",
