[Evo] #1179 - fix helios problem
 - Fix text display for helios type
 - Improve PJ display in helios document
 - Improve Bordereau and PES class
 - Improve endpoind API for helios document
 - Improve translation

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -18,7 +18,7 @@
             "attachment_list": "Liste des pièces",
             "attachment_number": "N°Piece",
             "creditor": "Créancier Référence bancaire",
-            "expenditure_type": "Nature de la dépense",
+            "type_pjs": "Nature de la ",
             "imputation": "Imputation",
             "amount_ht": "Montant HT",
             "amount_tva": "Montant TVA",
