[Evo] #3609 - Organization by subdomain
 - Update instance config
 - hwi/oauth-bundle version
 - Fix instanciation secret from ozwillo
 - Fix ozwillo url for user account
 - Fix reference to hwi oauth bundle
 - Fix service_uri and redirect_uris
 - Improve translations
 - Remove besimple bundle from composer

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -226,7 +226,9 @@
             "not_extractable": "Impossible de récuperer {{name}} - erreur {{errorCode}}",
             "add": "Impossible de créer le {{name}} - erreur {{errorCode}}",
             "not_updatable": "Impossible de mettre à jour le {{name}} - erreur {{errorCode}}",
-            "not_removable": "Impossible de supprimer le {{name}} - erreur {{errorCode}}"
+            "not_removable": "Impossible de supprimer le {{name}} - erreur {{errorCode}}",
+            "add_user": "Impossible d'ajouter l'utilisateur - erreur {{errorCode}}",
+            "add_user_plural": "Impossible d'ajouter l'utilisateur - erreur {{errorCode}}"
         },
         "success": {
             "add": "Ajout de {{name}}",
