[Evo] #3488 - classeur refus
 - Add classeurs function file
 - Update list classeurs and classeur function
 - Add dropdown for refuse button
 - Update endpoint api classeur
 - Update classeur entity
 - Update service actionMailer
 - Improve translation

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -141,6 +141,7 @@
                 "sign_title": "Signer le classeur",
                 "revert_title": "Rétracter le classeur",
                 "refus_title": "Refuser le classeur",
+                "refus_text": "Motif du refus",
                 "remove_title": "Retirer le classeur",
                 "delete_title": "Suprimer le classeur",
                 "comment_title": "Commenter le classeur"
