--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -145,7 +145,9 @@
                 "refus_text": "Motif du refus",
                 "remove_title": "Retirer le classeur",
                 "delete_title": "Suprimer le classeur",
-                "comment_title": "Commenter le classeur"
+                "comment_title": "Commenter le classeur",
+                "no_roles" : "Vous ne disposez pas de roles pour la signature",
+                "role_as" : "En tant que"
             },
             "sort_label": {
                 "name": "Nom",
